# fabulae

./: .gitignore  README.md  pyproject.toml
src/fabulae/: __init__.py  main.py  version_cli.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  main_test.py
